# appdrag

./: .clang_format  README.md  meson.build
src/: appdrag.h  main.c
src/backends/: backend.c  backend.h  flatpak.c  flatpak.h
